<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">xChat</string>
    <string name="action_settings">Settings</string>
    <string name="action_full_rooms_list">Complete Rooms List</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit">Edit</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_view_roster">View Friends List</string>
    <string name="action_start_conversation">Start a Conversation</string>
    <string name="action_view_profile">View Profile</string>
    <string name="action_buzz">Buzz</string>
    <string name="action_hotlist">Hotlist</string>
    <string name="action_clear_chat">Clear Chat</string>
    <string name="action_recall_chat">Recall Chat</string>
    <string name="action_email_conversation">Email Conversation</string>
    <string name="action_enable_secure">Enable Secure Mode</string>
    <string name="action_add_as_favorite">Add to favorites</string>
    <string name="action_add_new_contact">Add a user</string>
    <string name="action_add_contact">Add as Contact</string>
    <string name="action_send_image">Send Image</string>
    
    <string name="action_block">Block</string>
    <string name="action_mute">Mute</string>
    <string name="action_flash">Flash</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_rooms_list">Select a Room</string>
    <string name="title_rooms_by_country">Rooms By Country</string>
    <string name="title_rooms_by_category">Rooms by Category</string>
    <string name="username">navraj@outlook.com</string>
    <string name="password">123456</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_chat_rooms_list">Select a Room</string>
    <string name="title_activity_chat_room">xChat</string>
    <string name="action_room_info">Room Info</string>
    <string name="action_room_users">Room Users</string>
    <string name="send">Send</string>
    <string name="sendmessage">Type Message Here</string>
    <string name="title_activity_room_users">Users in this Room</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="title_activity_pm">Chat Window</string>
    <string name="title_activity_roster">Friends List</string>
    <string name="join">Join Room</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_conversations">xChat</string>
    <string name="title_activity_login">Login to xChat</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_register">Register Your Google Account</string>
    <string name="title_activity_logout">Logout from xChat</string>
    <string name="registeraccount">Register with xChat</string>
    <string name="name">Name</string>
    <string name="dob">DOB</string>
    <string name="dobformat">MM-DD-YYYY</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="nickname">User Name</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="apikey">ZC9fRqrI5AwH5_2o5zK2jzEODao0FbcLH3NZm7WHJnUlEmETGbmzLMNGlPGIupb2hGnd_G3hVhuzvegjGrR7XyOpLOH14erTgrV6pcoit77UPagoDzkVZd502W7ejihl</string>
    <string name="title_activity_buddy_requests">Buddy Requests</string>
    <string name="title_activity_profile">View Profile</string>
    <string name="title_activity_blocked">Blocked Users List</string>
    <string name="title_activity_favorites">Favorites List</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="recall">Recall</string>
    <string name="title_activity_tos">xChat Terms of Service</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_secure_mode_password">SecureModePasswordActivity</string>
    <string name="title_activity_edit_profile">Edit Your Profile</string>
    <string name="title_activity_view_profile_image">Profile Image</string>
    <string name="action_meet_new_people">Meet New People</string>
    <string name="action_discover">Discover People</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="title_activity_meet_people">Meet New People</string>
    <string name="title_meetoption_list">Meet New People</string>
    <string name="title_meetoption_detail">Meet New People</string>
    <string name="title_activity_recently_joined">Meet New People</string>
    <string name="title_activity_active_users">Users in Chatrooms</string>
    <string name="title_activity_active_rooms">Active Chat Rooms</string>
    <string name="title_activity_top_rooms">Top Rooms</string>

</resources>
