<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity" 
    android:background="@drawable/registerbackground">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/registeraccount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
			<LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:orientation="horizontal"			    
			    >
		     <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
		    android:orientation="vertical"     
		    android:layout_weight="1.0"
		         >
		    		    <EditText
                android:id="@+id/txtNickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginRight="4dp"
                android:hint="@string/nickname" >
            </EditText>
		            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginRight="4dp"
                android:hint="@string/name" >

            </EditText>
		    		    
		         
		     </LinearLayout>
				    <ImageView 
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:id="@+id/imgProfile"
                android:src="@drawable/user"
			    android:layout_marginRight="5dp"    />	    
			    
			</LinearLayout>

<RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rdbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

            </RadioGroup>
            <EditText
                android:id="@+id/txtDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dobformat"
                android:inputType="date" >
            </EditText>

            <EditText
                android:id="@+id/txtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/city" >
            </EditText>
            <EditText
                android:id="@+id/txtZip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/zip" >
            </EditText>
            
            <EditText
                android:id="@+id/txtState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/state" >
            </EditText>

            <EditText
                android:id="@+id/txtCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/country" >
            </EditText>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
   				android:layout_marginTop="8dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/cmdRegister"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_action_save"
                    android:text="Register" 
                    android:textColor="#ffffff"
                   android:background="@drawable/roundedbutton"/>

                <Button
                    android:id="@+id/cmdCancel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_action_cancel"
                    android:text="Cancel" 
                    android:textColor="#ffffff"
                    android:background="@drawable/roundedbutton"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>